--- a/house_price_prediction_regression.ipynb
+++ b/house_price_prediction_regression.ipynb
@@ -35,7 +35,7 @@
         "from sklearn.datasets import fetch_california_housing\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import accuracy_score, mean_squared_error, r2_score\n"
+        "from sklearn.metrics import mean_squared_error, r2_score\n"
       ],
       "metadata": {
         "id": "WeOIpIxYOSKD"
