--- a/Object_Detection_YOLO_Algorithm.ipynb
+++ b/Object_Detection_YOLO_Algorithm.ipynb
@@ -13,7 +13,7 @@
         "YOLO ( You Only Look Once ) algorithm is ideal for locating and identifying objects in images in real time (e.g., traffic surveillance, autonomous vehicles, and security applications).\n",
         "\n",
         "- Platform: Google Colab, with GPU acceleration for faster processing.\n",
-        "- Input Data: A .zip file containing multiple images.\n",
+        "- Input Data: A .jpeg image.\n",
         "- Model: YOLOv5, pre-trained on the COCO dataset, which recognizes 80 common object classes.\n",
         "- Output: Detection results with bounding boxes and labels for each image, displayed inline in Colab and saved to a results folder.\n"
       ],
